# Bewise_ai_audio_api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
audio/: engine.py  models.py  router.py  schemas.py
data/: auth.py  config.py  db.py  settings.py
migrations/: env.py
migrations/versions/: 55b94f76cdba_.py  b0f64a95259c_.py  bffdb97beaa4_.py
tests/: conftest.py  test_0_auth.py
users/: models.py  router.py  schemas.py
