[tool.poetry]
name = "bewise-ai-audio-api"
version = "0.1.0"
description = ""
authors = ["Timur <81976283+mym1chelle@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
alembic = "^1.11.1"
asyncpg = "^0.27.0"
environs = "^9.5.0"
python-jose = "^3.3.0"
pydub = "^0.25.1"
aiofiles = "^23.1.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
flake8 = "^6.0.0"
aiosqlite = "^0.19.0"
faker = "^18.9.0"

[tool.pytest.ini_options]
asyncio_mode='auto'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
